feat: Criação e mapeamento do banco de dados (SQLServer)

--- a/Acoes_Invest/appsettings.json
+++ b/Acoes_Invest/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "connection": "Server=DESKTOP-2BIIV9L;Database=Acoes;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
