--- a/AcoesInvest.Infra.Data/AcoesInvest.Infra.Data.csproj
+++ b/AcoesInvest.Infra.Data/AcoesInvest.Infra.Data.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.21" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.21" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AcoesInvest.Domain\AcoesInvest.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
