feat(usuarios): Implementa validação de unicidade do e-mail no método PUT

--- a/AcoesInvest.Application/AcoesInvest.Application.csproj
+++ b/AcoesInvest.Application/AcoesInvest.Application.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AcoesInvest.Domain\AcoesInvest.Domain.csproj" />
+    <ProjectReference Include="..\AcoesInvest.Infra.Data\AcoesInvest.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
