feat: Implementa autenticação para área de login

--- a/Acoes_Invest/appsettings.json
+++ b/Acoes_Invest/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "connection": "Server=DESKTOP-2BIIV9L;Database=Acoes;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
+  "JwtSettings": {
+    "SecretKey": "secretkey_teste_area_de_login_com_32_caracteres",
+    "Issuer": "AcoesInvestAPI",
+    "Audience": "AcoesInvestClients",
+    "ExpirationInMinutes": 60
+  },
   "AllowedHosts": "*"
 }
